--- a/records/kb2143838_vmware_vcenter_server_appliance_table1_release_as-records.json
+++ b/records/kb2143838_vmware_vcenter_server_appliance_table1_release_as-records.json
@@ -1,252 +1,252 @@
 [
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 Update 3l\u00a0(6.7.0.46000)",
-        "Release Date":"2020-11-19",
+        "Version - Release Name":"vCenter Appliance 6.7 Update 3l (6.7.0.46000)",
+        "Release Date":"2020-11-19T00:00:00.000Z",
         "VAMI\/Release Notes":"17138064",
         "Client\/MOB\/vpxd.log":"17137327",
         "Build Number":"17137327",
-        "Version":"vCenter Appliance 6.7 Update 3l\u00a0",
+        "Version":"vCenter Appliance 6.7 Update 3l",
         "Release Name":"6.7.0.46000"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 Update 3k\u00a0(6.7.0.45100)",
-        "Release Date":"2020-10-22",
+        "Version - Release Name":"vCenter Appliance 6.7 Update 3k (6.7.0.45100)",
+        "Release Date":"2020-10-22T00:00:00.000Z",
         "VAMI\/Release Notes":"17028579",
         "Client\/MOB\/vpxd.log":"17028632",
         "Build Number":"17028632",
-        "Version":"vCenter Appliance 6.7 Update 3k\u00a0",
+        "Version":"vCenter Appliance 6.7 Update 3k",
         "Release Name":"6.7.0.45100"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 Update 3j (6.7.0.45000)",
-        "Release Date":"2020-08-20",
+        "Version - Release Name":"vCenter Appliance 6.7 Update 3j (6.7.0.45000)",
+        "Release Date":"2020-08-20T00:00:00.000Z",
         "VAMI\/Release Notes":"16708996",
         "Client\/MOB\/vpxd.log":"16709110",
         "Build Number":"16709110",
-        "Version":"vCenter Appliance 6.7 Update 3j ",
+        "Version":"vCenter Appliance 6.7 Update 3j",
         "Release Name":"6.7.0.45000"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 Update 3i (6.7.0.44200)",
-        "Release Date":"2020-07-30",
+        "Version - Release Name":"vCenter Appliance 6.7 Update 3i (6.7.0.44200)",
+        "Release Date":"2020-07-30T00:00:00.000Z",
         "VAMI\/Release Notes":"16616482",
         "Client\/MOB\/vpxd.log":"16616668",
         "Build Number":"16616668",
-        "Version":"vCenter Appliance 6.7 Update 3i ",
+        "Version":"vCenter Appliance 6.7 Update 3i",
         "Release Name":"6.7.0.44200"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 Update 3h (6.7.0.44100)",
-        "Release Date":"2020-05-28",
+        "Version - Release Name":"vCenter Appliance 6.7 Update 3h (6.7.0.44100)",
+        "Release Date":"2020-05-28T00:00:00.000Z",
         "VAMI\/Release Notes":"16275304",
         "Client\/MOB\/vpxd.log":"16243230",
         "Build Number":"16243230",
-        "Version":"vCenter Appliance 6.7 Update 3h ",
+        "Version":"vCenter Appliance 6.7 Update 3h",
         "Release Name":"6.7.0.44100"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 Update 3g (6.7.0.44000)",
-        "Release Date":"2020-04-28",
+        "Version - Release Name":"vCenter Appliance 6.7 Update 3g (6.7.0.44000)",
+        "Release Date":"2020-04-28T00:00:00.000Z",
         "VAMI\/Release Notes":"16046470",
         "Client\/MOB\/vpxd.log":"16046713",
         "Build Number":"16046713",
-        "Version":"vCenter Appliance 6.7 Update 3g ",
+        "Version":"vCenter Appliance 6.7 Update 3g",
         "Release Name":"6.7.0.44000"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 Update 3f (6.7.0.43000)",
-        "Release Date":"2020-04-09",
+        "Version - Release Name":"vCenter Appliance 6.7 Update 3f (6.7.0.43000)",
+        "Release Date":"2020-04-09T00:00:00.000Z",
         "VAMI\/Release Notes":"15976714",
         "Client\/MOB\/vpxd.log":"15976728",
         "Build Number":"15976728",
-        "Version":"vCenter Appliance 6.7 Update 3f ",
+        "Version":"vCenter Appliance 6.7 Update 3f",
         "Release Name":"6.7.0.43000"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 Update 3e (6.7.0.42300)",
-        "Release Date":"2020-03-26",
+        "Version - Release Name":"vCenter Appliance 6.7 Update 3e (6.7.0.42300)",
+        "Release Date":"2020-03-26T00:00:00.000Z",
         "VAMI\/Release Notes":"15808844",
         "Client\/MOB\/vpxd.log":"15808844",
         "Build Number":"15808844",
-        "Version":"vCenter Appliance 6.7 Update 3e ",
+        "Version":"vCenter Appliance 6.7 Update 3e",
         "Release Name":"6.7.0.42300"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 Update 3d (6.7.0.42200)",
-        "Release Date":"2020-02-27",
+        "Version - Release Name":"vCenter Appliance 6.7 Update 3d (6.7.0.42200)",
+        "Release Date":"2020-02-27T00:00:00.000Z",
         "VAMI\/Release Notes":"15679281",
         "Client\/MOB\/vpxd.log":"15679281",
         "Build Number":"15679281",
-        "Version":"vCenter Appliance 6.7 Update 3d ",
+        "Version":"vCenter Appliance 6.7 Update 3d",
         "Release Name":"6.7.0.42200"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 Update 3c (6.7.0.42100)",
-        "Release Date":"2020-01-30",
+        "Version - Release Name":"vCenter Appliance 6.7 Update 3c (6.7.0.42100)",
+        "Release Date":"2020-01-30T00:00:00.000Z",
         "VAMI\/Release Notes":"15505668",
         "Client\/MOB\/vpxd.log":"15505668",
         "Build Number":"15505668",
-        "Version":"vCenter Appliance 6.7 Update 3c ",
+        "Version":"vCenter Appliance 6.7 Update 3c",
         "Release Name":"6.7.0.42100"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 Update 3b\u00a0(6.7.0.42000)",
-        "Release Date":"2019-12-05",
+        "Version - Release Name":"vCenter Appliance 6.7 Update 3b (6.7.0.42000)",
+        "Release Date":"2019-12-05T00:00:00.000Z",
         "VAMI\/Release Notes":"15132721",
         "Client\/MOB\/vpxd.log":"15129973",
         "Build Number":"15129973",
-        "Version":"vCenter Appliance 6.7 Update 3b\u00a0",
+        "Version":"vCenter Appliance 6.7 Update 3b",
         "Release Name":"6.7.0.42000"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 Update 3a\u00a0(6.7.0.41000)",
-        "Release Date":"2019-10-24",
+        "Version - Release Name":"vCenter Appliance 6.7 Update 3a (6.7.0.41000)",
+        "Release Date":"2019-10-24T00:00:00.000Z",
         "VAMI\/Release Notes":"14836122",
         "Client\/MOB\/vpxd.log":"14792544",
         "Build Number":"14792544",
-        "Version":"vCenter Appliance 6.7 Update 3a\u00a0",
+        "Version":"vCenter Appliance 6.7 Update 3a",
         "Release Name":"6.7.0.41000"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 Update 3 (6.7.0.40000)",
-        "Release Date":"2019-08-20",
+        "Version - Release Name":"vCenter Appliance 6.7 Update 3 (6.7.0.40000)",
+        "Release Date":"2019-08-20T00:00:00.000Z",
         "VAMI\/Release Notes":"14367737",
         "Client\/MOB\/vpxd.log":"14368073",
         "Build Number":"14368073",
-        "Version":"vCenter Appliance 6.7 Update 3 ",
+        "Version":"vCenter Appliance 6.7 Update 3",
         "Release Name":"6.7.0.40000"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 Update 2c\u00a0(6.7.0.32000)",
-        "Release Date":"2019-07-16",
+        "Version - Release Name":"vCenter Appliance 6.7 Update 2c (6.7.0.32000)",
+        "Release Date":"2019-07-16T00:00:00.000Z",
         "VAMI\/Release Notes":"14070457",
         "Client\/MOB\/vpxd.log":"14070654",
         "Build Number":"14070654",
-        "Version":"vCenter Appliance 6.7 Update 2c\u00a0",
+        "Version":"vCenter Appliance 6.7 Update 2c",
         "Release Name":"6.7.0.32000"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 Update 2b\u00a0(6.7.0.31100)",
-        "Release Date":"2019-05-30",
+        "Version - Release Name":"vCenter Appliance 6.7 Update 2b (6.7.0.31100)",
+        "Release Date":"2019-05-30T00:00:00.000Z",
         "VAMI\/Release Notes":"13843380",
         "Client\/MOB\/vpxd.log":"13843469",
         "Build Number":"13843469",
-        "Version":"vCenter Appliance 6.7 Update 2b\u00a0",
+        "Version":"vCenter Appliance 6.7 Update 2b",
         "Release Name":"6.7.0.31100"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 Update 2a\u00a0(6.7.0.31000)",
-        "Release Date":"2019-05-14",
+        "Version - Release Name":"vCenter Appliance 6.7 Update 2a (6.7.0.31000)",
+        "Release Date":"2019-05-14T00:00:00.000Z",
         "VAMI\/Release Notes":"13643870",
         "Client\/MOB\/vpxd.log":"13639324",
         "Build Number":"13639324",
-        "Version":"vCenter Appliance 6.7 Update 2a\u00a0",
+        "Version":"vCenter Appliance 6.7 Update 2a",
         "Release Name":"6.7.0.31000"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 U2\u00a0(6.7.0.30000)",
-        "Release Date":"2019-04-11",
+        "Version - Release Name":"vCenter Appliance 6.7 U2 (6.7.0.30000)",
+        "Release Date":"2019-04-11T00:00:00.000Z",
         "VAMI\/Release Notes":"13010631",
         "Client\/MOB\/vpxd.log":"13007421",
         "Build Number":"13007421",
-        "Version":"vCenter Appliance 6.7 U2\u00a0",
+        "Version":"vCenter Appliance 6.7 U2",
         "Release Name":"6.7.0.30000"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 U1b (6.7.0.21000)",
-        "Release Date":"2019-01-17",
+        "Version - Release Name":"vCenter Appliance 6.7 U1b (6.7.0.21000)",
+        "Release Date":"2019-01-17T00:00:00.000Z",
         "VAMI\/Release Notes":"11726888",
         "Client\/MOB\/vpxd.log":"11727113",
         "Build Number":"11727113",
-        "Version":"vCenter Appliance 6.7 U1b ",
+        "Version":"vCenter Appliance 6.7 U1b",
         "Release Name":"6.7.0.21000"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 U1a (6.7.0.20100)",
-        "Release Date":"2018-12-20",
+        "Version - Release Name":"vCenter Appliance 6.7 U1a (6.7.0.20100)",
+        "Release Date":"2018-12-20T00:00:00.000Z",
         "VAMI\/Release Notes":"11338176",
         "Client\/MOB\/vpxd.log":"11338799",
         "Build Number":"11338799",
-        "Version":"vCenter Appliance 6.7 U1a ",
+        "Version":"vCenter Appliance 6.7 U1a",
         "Release Name":"6.7.0.20100"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 U1\u00a0(6.7.0.20000)",
-        "Release Date":"2018-10-16",
+        "Version - Release Name":"vCenter Appliance 6.7 U1 (6.7.0.20000)",
+        "Release Date":"2018-10-16T00:00:00.000Z",
         "VAMI\/Release Notes":"10244745",
         "Client\/MOB\/vpxd.log":"10244857",
         "Build Number":"10244857",
-        "Version":"vCenter Appliance 6.7 U1\u00a0",
+        "Version":"vCenter Appliance 6.7 U1",
         "Release Name":"6.7.0.20000"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7d (6.7.0.14000)",
-        "Release Date":"2018-08-14",
+        "Version - Release Name":"vCenter Appliance 6.7d (6.7.0.14000)",
+        "Release Date":"2018-08-14T00:00:00.000Z",
         "VAMI\/Release Notes":"9451876",
         "Client\/MOB\/vpxd.log":"9433931",
         "Build Number":"9433931",
-        "Version":"vCenter Appliance 6.7d ",
+        "Version":"vCenter Appliance 6.7d",
         "Release Name":"6.7.0.14000"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7c (6.7.0.13000)",
-        "Release Date":"2018-07-26",
+        "Version - Release Name":"vCenter Appliance 6.7c (6.7.0.13000)",
+        "Release Date":"2018-07-26T00:00:00.000Z",
         "VAMI\/Release Notes":"9232925",
         "Client\/MOB\/vpxd.log":"9232942",
         "Build Number":"9232942",
-        "Version":"vCenter Appliance 6.7c ",
+        "Version":"vCenter Appliance 6.7c",
         "Release Name":"6.7.0.13000"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7b (6.7.0.12000)",
-        "Release Date":"2018-06-28",
+        "Version - Release Name":"vCenter Appliance 6.7b (6.7.0.12000)",
+        "Release Date":"2018-06-28T00:00:00.000Z",
         "VAMI\/Release Notes":"8832884",
         "Client\/MOB\/vpxd.log":"8833179",
         "Build Number":"8833179",
-        "Version":"vCenter Appliance 6.7b ",
+        "Version":"vCenter Appliance 6.7b",
         "Release Name":"6.7.0.12000"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7a (6.7.0.11000)",
-        "Release Date":"2018-05-22",
+        "Version - Release Name":"vCenter Appliance 6.7a (6.7.0.11000)",
+        "Release Date":"2018-05-22T00:00:00.000Z",
         "VAMI\/Release Notes":"8546234",
         "Client\/MOB\/vpxd.log":"8546293",
         "Build Number":"8546293",
-        "Version":"vCenter Appliance 6.7a ",
+        "Version":"vCenter Appliance 6.7a",
         "Release Name":"6.7.0.11000"
     },
     {
         "Edition":"VCSA",
-        "Version - Release Date":"vCenter Appliance 6.7 (6.7.0.10000)",
-        "Release Date":"2018-04-17",
+        "Version - Release Name":"vCenter Appliance 6.7 (6.7.0.10000)",
+        "Release Date":"2018-04-17T00:00:00.000Z",
         "VAMI\/Release Notes":"8217866",
         "Client\/MOB\/vpxd.log":"8170161",
         "Build Number":"8170161",
-        "Version":"vCenter Appliance 6.7 ",
+        "Version":"vCenter Appliance 6.7",
         "Release Name":"6.7.0.10000"
     }
 ]
