--- a/records/kb2143838_vmware_vcenter_server_appliance_table2_release_as-records.json
+++ b/records/kb2143838_vmware_vcenter_server_appliance_table2_release_as-records.json
@@ -1,8 +1,8 @@
 [
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 Update 3l",
-        "Release Date":"2020-11-19",
+        "Version - Release Name":"vCenter Windows 6.7 Update 3l",
+        "Release Date":"2020-11-19T00:00:00.000Z",
         "Registry\/Release Notes":"17138064",
         "Client\/MOB\/vpxd.log":"17137232",
         "Build Number":"17137232",
@@ -11,8 +11,8 @@
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 Update 3k",
-        "Release Date":"2020-10-22",
+        "Version - Release Name":"vCenter Windows 6.7 Update 3k",
+        "Release Date":"2020-10-22T00:00:00.000Z",
         "Registry\/Release Notes":"17028579",
         "Client\/MOB\/vpxd.log":"17028620",
         "Build Number":"17028620",
@@ -21,8 +21,8 @@
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 Update 3j",
-        "Release Date":"2020-08-20",
+        "Version - Release Name":"vCenter Windows 6.7 Update 3j",
+        "Release Date":"2020-08-20T00:00:00.000Z",
         "Registry\/Release Notes":"16708996",
         "Client\/MOB\/vpxd.log":"16709044",
         "Build Number":"16709044",
@@ -31,8 +31,8 @@
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 Update 3i",
-        "Release Date":"2020-07-30",
+        "Version - Release Name":"vCenter Windows 6.7 Update 3i",
+        "Release Date":"2020-07-30T00:00:00.000Z",
         "Registry\/Release Notes":"16616482",
         "Client\/MOB\/vpxd.log":"16616655",
         "Build Number":"16616655",
@@ -41,8 +41,8 @@
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 Update 3h",
-        "Release Date":"2020-05-28",
+        "Version - Release Name":"vCenter Windows 6.7 Update 3h",
+        "Release Date":"2020-05-28T00:00:00.000Z",
         "Registry\/Release Notes":"16275304",
         "Client\/MOB\/vpxd.log":"16243225",
         "Build Number":"16243225",
@@ -51,8 +51,8 @@
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 Update 3g",
-        "Release Date":"2020-04-28",
+        "Version - Release Name":"vCenter Windows 6.7 Update 3g",
+        "Release Date":"2020-04-28T00:00:00.000Z",
         "Registry\/Release Notes":"16046470",
         "Client\/MOB\/vpxd.log":"16046671",
         "Build Number":"16046671",
@@ -61,8 +61,8 @@
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 Update 3f",
-        "Release Date":"2020-04-09",
+        "Version - Release Name":"vCenter Windows 6.7 Update 3f",
+        "Release Date":"2020-04-09T00:00:00.000Z",
         "Registry\/Release Notes":"15976714",
         "Client\/MOB\/vpxd.log":"15976721",
         "Build Number":"15976721",
@@ -71,8 +71,8 @@
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 Update 3e",
-        "Release Date":"2020-03-26",
+        "Version - Release Name":"vCenter Windows 6.7 Update 3e",
+        "Release Date":"2020-03-26T00:00:00.000Z",
         "Registry\/Release Notes":"15808844",
         "Client\/MOB\/vpxd.log":"15807675",
         "Build Number":"15807675",
@@ -81,8 +81,8 @@
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 Update 3d",
-        "Release Date":"2020-02-27",
+        "Version - Release Name":"vCenter Windows 6.7 Update 3d",
+        "Release Date":"2020-02-27T00:00:00.000Z",
         "Registry\/Release Notes":"15679281",
         "Client\/MOB\/vpxd.log":"15679284",
         "Build Number":"15679284",
@@ -91,8 +91,8 @@
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 Update 3c",
-        "Release Date":"2020-01-30",
+        "Version - Release Name":"vCenter Windows 6.7 Update 3c",
+        "Release Date":"2020-01-30T00:00:00.000Z",
         "Registry\/Release Notes":"15505668",
         "Client\/MOB\/vpxd.log":"15505671",
         "Build Number":"15505671",
@@ -101,137 +101,137 @@
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 Update 3b\u00a0(6.7.0.42000)",
-        "Release Date":"2019-12-05",
+        "Version - Release Name":"vCenter Windows 6.7 Update 3b (6.7.0.42000)",
+        "Release Date":"2019-12-05T00:00:00.000Z",
         "Registry\/Release Notes":"15132721",
         "Client\/MOB\/vpxd.log":"15129938",
         "Build Number":"15129938",
-        "Version":"vCenter Windows 6.7 Update 3b\u00a0",
+        "Version":"vCenter Windows 6.7 Update 3b",
         "Release Name":"6.7.0.42000"
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 Update 3a\u00a0(6.7.0.41000)",
-        "Release Date":"2019-10-24",
+        "Version - Release Name":"vCenter Windows 6.7 Update 3a (6.7.0.41000)",
+        "Release Date":"2019-10-24T00:00:00.000Z",
         "Registry\/Release Notes":"14836122",
         "Client\/MOB\/vpxd.log":"14792528",
         "Build Number":"14792528",
-        "Version":"vCenter Windows 6.7 Update 3a\u00a0",
+        "Version":"vCenter Windows 6.7 Update 3a",
         "Release Name":"6.7.0.41000"
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 Update 3\u00a0(6.7.0.40000)",
-        "Release Date":"2019-08-20",
+        "Version - Release Name":"vCenter Windows 6.7 Update 3 (6.7.0.40000)",
+        "Release Date":"2019-08-20T00:00:00.000Z",
         "Registry\/Release Notes":"14367737",
         "Client\/MOB\/vpxd.log":"14368027",
         "Build Number":"14368027",
-        "Version":"vCenter Windows 6.7 Update 3\u00a0",
+        "Version":"vCenter Windows 6.7 Update 3",
         "Release Name":"6.7.0.40000"
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 Update 2b\u00a0(6.7.0.31100)",
-        "Release Date":"2019-05-14",
+        "Version - Release Name":"vCenter Windows 6.7 Update 2b (6.7.0.31100)",
+        "Release Date":"2019-05-14T00:00:00.000Z",
         "Registry\/Release Notes":"13843380",
         "Client\/MOB\/vpxd.log":"13843469",
         "Build Number":"13843469",
-        "Version":"vCenter Windows 6.7 Update 2b\u00a0",
+        "Version":"vCenter Windows 6.7 Update 2b",
         "Release Name":"6.7.0.31100"
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 Update 2a\u00a0(6.7.0.31000)",
-        "Release Date":"2019-05-14",
+        "Version - Release Name":"vCenter Windows 6.7 Update 2a (6.7.0.31000)",
+        "Release Date":"2019-05-14T00:00:00.000Z",
         "Registry\/Release Notes":"13643870",
         "Client\/MOB\/vpxd.log":"13638830",
         "Build Number":"13638830",
-        "Version":"vCenter Windows 6.7 Update 2a\u00a0",
+        "Version":"vCenter Windows 6.7 Update 2a",
         "Release Name":"6.7.0.31000"
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 U2\u00a0(6.7.0.30000)",
-        "Release Date":"2019-04-11",
+        "Version - Release Name":"vCenter Windows 6.7 U2 (6.7.0.30000)",
+        "Release Date":"2019-04-11T00:00:00.000Z",
         "Registry\/Release Notes":"13010631",
         "Client\/MOB\/vpxd.log":"13007157",
         "Build Number":"13007157",
-        "Version":"vCenter Windows 6.7 U2\u00a0",
+        "Version":"vCenter Windows 6.7 U2",
         "Release Name":"6.7.0.30000"
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 U1b\u00a0(6.7.0.21000)",
-        "Release Date":"2019-01-17",
+        "Version - Release Name":"vCenter Windows 6.7 U1b (6.7.0.21000)",
+        "Release Date":"2019-01-17T00:00:00.000Z",
         "Registry\/Release Notes":"11726888",
         "Client\/MOB\/vpxd.log":"11727065",
         "Build Number":"11727065",
-        "Version":"vCenter Windows 6.7 U1b\u00a0",
+        "Version":"vCenter Windows 6.7 U1b",
         "Release Name":"6.7.0.21000"
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7\u00a0U1\u00a0(6.7.0.20000)",
-        "Release Date":"2018-10-16",
+        "Version - Release Name":"vCenter Windows 6.7 U1 (6.7.0.20000)",
+        "Release Date":"2018-10-16T00:00:00.000Z",
         "Registry\/Release Notes":"10244745",
         "Client\/MOB\/vpxd.log":"10244807",
         "Build Number":"10244807",
-        "Version":"vCenter Windows 6.7\u00a0U1\u00a0",
+        "Version":"vCenter Windows 6.7 U1",
         "Release Name":"6.7.0.20000"
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7d (6.7.0.14000)",
-        "Release Date":"2018-08-14",
+        "Version - Release Name":"vCenter Windows 6.7d (6.7.0.14000)",
+        "Release Date":"2018-08-14T00:00:00.000Z",
         "Registry\/Release Notes":"9451876",
         "Client\/MOB\/vpxd.log":"9433894",
         "Build Number":"9433894",
-        "Version":"vCenter Windows 6.7d ",
+        "Version":"vCenter Windows 6.7d",
         "Release Name":"6.7.0.14000"
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7c (6.7.0.13000)",
-        "Release Date":"2018-07-26",
+        "Version - Release Name":"vCenter Windows 6.7c (6.7.0.13000)",
+        "Release Date":"2018-07-26T00:00:00.000Z",
         "Registry\/Release Notes":"9232925",
         "Client\/MOB\/vpxd.log":"9232933",
         "Build Number":"9232933",
-        "Version":"vCenter Windows 6.7c ",
+        "Version":"vCenter Windows 6.7c",
         "Release Name":"6.7.0.13000"
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7b (6.7.0.12000)",
-        "Release Date":"2018-06-28",
+        "Version - Release Name":"vCenter Windows 6.7b (6.7.0.12000)",
+        "Release Date":"2018-06-28T00:00:00.000Z",
         "Registry\/Release Notes":"8832884",
         "Client\/MOB\/vpxd.log":"8833120",
         "Build Number":"8833120",
-        "Version":"vCenter Windows 6.7b ",
+        "Version":"vCenter Windows 6.7b",
         "Release Name":"6.7.0.12000"
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7a (6.7.0.11000)",
-        "Release Date":"2018-05-22",
+        "Version - Release Name":"vCenter Windows 6.7a (6.7.0.11000)",
+        "Release Date":"2018-05-22T00:00:00.000Z",
         "Registry\/Release Notes":"8546234",
         "Client\/MOB\/vpxd.log":"8546281",
         "Build Number":"8546281",
-        "Version":"vCenter Windows 6.7a ",
+        "Version":"vCenter Windows 6.7a",
         "Release Name":"6.7.0.11000"
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":"vCenter Windows 6.7 (6.7.0.10000)",
-        "Release Date":"2018-04-17",
+        "Version - Release Name":"vCenter Windows 6.7 (6.7.0.10000)",
+        "Release Date":"2018-04-17T00:00:00.000Z",
         "Registry\/Release Notes":"8217866",
         "Client\/MOB\/vpxd.log":"8170087",
         "Build Number":"8170087",
-        "Version":"vCenter Windows 6.7 ",
+        "Version":"vCenter Windows 6.7",
         "Release Name":"6.7.0.10000"
     },
     {
         "Edition":"Windows",
-        "Version - Release Date":null,
+        "Version - Release Name":null,
         "Release Date":null,
         "Registry\/Release Notes":null,
         "Client\/MOB\/vpxd.log":null,
